[gd_scene load_steps=17 format=3 uid="uid://dvdk0mgxvvvnv"]

[ext_resource type="Script" path="res://Scenes/ghostController.gd" id="1_ub2gl"]
[ext_resource type="Texture2D" uid="uid://blq70pt5we2b8" path="res://Assets/Ghost/Ghost_Vulnerable_Blue_02.png" id="2_buc6k"]
[ext_resource type="Script" path="res://Scenes/controller_body_sprite.gd" id="3_y4q4p"]
[ext_resource type="Texture2D" uid="uid://gcljnvys5tll" path="res://Assets/Ghost/Ghost_Eyes_Down.png" id="4_sdnw3"]
[ext_resource type="Script" path="res://Scenes/controller_eyes_sprite.gd" id="5_ynosq"]
[ext_resource type="Texture2D" uid="uid://cvto5sswde2ik" path="res://Assets/Ghost/Ghost_Vulnerable_White_01.png" id="9_hee0n"]
[ext_resource type="Texture2D" uid="uid://d0uu218xbjg0r" path="res://Assets/Ghost/Ghost_Vulnerable_White_02.png" id="10_kvw0a"]
[ext_resource type="Texture2D" uid="uid://bd4p43ndtu2v8" path="res://Assets/Ghost/Ghost_Vulnerable_Blue_01.png" id="11_h3d46"]
[ext_resource type="Texture2D" uid="uid://bwh3pnp6rcycn" path="res://Assets/Ghost/Ghost_Body_01.png" id="12_qikxg"]
[ext_resource type="Texture2D" uid="uid://k486j4lctjb7" path="res://Assets/Ghost/Ghost_Body_02.png" id="13_gcoe0"]
[ext_resource type="Theme" uid="uid://bvug006evisg" path="res://Scenes/label_theme.tres" id="14_200xt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5epkj"]
radius = 8.0

[sub_resource type="Animation" id="Animation_2guav"]
resource_name = "blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_hee0n"), ExtResource("10_kvw0a"), ExtResource("2_buc6k"), ExtResource("11_h3d46")]
}

[sub_resource type="Animation" id="Animation_41nny"]
resource_name = "moving"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("12_qikxg"), ExtResource("13_gcoe0")]
}

[sub_resource type="Animation" id="Animation_txidn"]
resource_name = "running_away"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("11_h3d46"), ExtResource("2_buc6k")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_38f5b"]
_data = {
"blinking": SubResource("Animation_2guav"),
"moving": SubResource("Animation_41nny"),
"running_away": SubResource("Animation_txidn")
}

[node name="GhostPlayer" type="Area2D"]
collision_layer = 16
script = ExtResource("1_ub2gl")

[node name="BodySprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("9_hee0n")
script = ExtResource("3_y4q4p")

[node name="EyesSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_sdnw3")
script = ExtResource("5_ynosq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5epkj")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_38f5b")
}

[node name="ScatterTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="UpdateChasingTargetPositionTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="RunAwayTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="PointsLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -19.0
offset_top = -25.0
offset_right = 21.0
offset_bottom = -2.0
theme = ExtResource("14_200xt")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AtHomeTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ScatterTimer" to="." method="_on_scatter_timer_timeout"]
[connection signal="timeout" from="UpdateChasingTargetPositionTimer" to="." method="_on_update_chasing_target_position_timer_timeout"]
[connection signal="timeout" from="RunAwayTimer" to="." method="_on_run_away_timer_timeout"]
